Added Schema class, Added form-urlencoded fields, fixed examples
